tests/tests/Other_tests/tests-Init-01-Ret-01-04_Ret_UnaffectedIntInMain/pld-compile.txt
Error in input.c.
Error variable b is not defined. On position 5:8
   "	return b;"
            ^

1 error generated.

return code: 1
